--- a/index.html
+++ b/index.html
@@ -262,15 +262,17 @@
       // --- Firebase Config and Initialization ---
       // IMPORTANT: Replace the placeholder values below with your own Firebase project configuration.
       // You can get this from your Firebase project settings under "Project settings" > "General".
-      const firebaseConfig = {
-        apiKey: "",
-        authDomain: "",
-        databaseURL: "",
-        projectId: "",
-        storageBucket: "",
-        messagingSenderId: "",
-        appId: ""
-      };
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "",
+  authDomain: "",
+  databaseURL: "",
+  projectId: "",
+  storageBucket: "",
+  messagingSenderId: "",
+  appId: "",
+  measurementId: ""
+};
 
       // Initialize Firebase and start the game
       try {
