--- a/index.html
+++ b/index.html
@@ -260,19 +260,17 @@
       import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-auth.js";
 
       // --- Firebase Config and Initialization ---
-      // IMPORTANT: Replace the placeholder values below with your own Firebase project configuration.
-      // You can get this from your Firebase project settings under "Project settings" > "General".
       // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "",
-  authDomain: "",
-  databaseURL: "",
-  projectId: "",
-  storageBucket: "",
-  messagingSenderId: "",
-  appId: "",
-  measurementId: ""
-};
+      const firebaseConfig = {
+        apiKey: "AIzaSyC19fzzlHyYv0XzzbTF2D9uc7Y5qqYDBpo",
+        authDomain: "tic-tac-toe-pro-devmoon.firebaseapp.com",
+        databaseURL: "https://tic-tac-toe-pro-devmoon-default-rtdb.firebaseio.com",
+        projectId: "tic-tac-toe-pro-devmoon",
+        storageBucket: "tic-tac-toe-pro-devmoon.firebasestorage.app",
+        messagingSenderId: "117269490887",
+        appId: "1:117269490887:web:986666a79e0dab5b62a2e2",
+        measurementId: "G-8G74TZ6XMK"
+      };
 
       // Initialize Firebase and start the game
       try {
@@ -1047,4 +1045,4 @@ const firebaseConfig = {
     };
     </script>
 </body>
-    </html>
+</html>
